--- a/package.json
+++ b/package.json
@@ -29,19 +29,20 @@
   "dependencies": {
     "axios": "^0.12.0",
     "babel": "^6.5.2",
-    "bcrypt": "~0.8.5",
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.5",
     "express": "^4.14.0",
     "express-session": "~1.11.3",
-    "materialize-css": "^0.97.8",
     "method-override": "^2.3.6",
     "mysql": "^2.12.0",
     "passport": "~0.3.0",
     "passport-local": "~1.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-materialize": "^0.17.7",
     "sequelize": "^3.25.0",
     "sequelize-cli": "^2.4.0"
   },
