--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "passport-local": "~1.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-router": "^2.4.1",
     "sequelize": "^3.25.0",
-    "sequelize-cli": "^2.4.0"
+    "sequelize-cli": "^2.4.0",
+    "material-ui": "^0.15.4"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
