--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "~1.3.5",
     "express": "^4.14.0",
     "express-session": "~1.11.3",
+    "material-ui": "^0.15.4",
     "materialize-css": "^0.97.8",
     "method-override": "^2.3.6",
     "mysql": "^2.12.0",
@@ -44,8 +45,7 @@
     "react-dom": "^0.14.3",
     "react-router": "^2.4.1",
     "sequelize": "^3.25.0",
-    "sequelize-cli": "^2.4.0",
-    "material-ui": "^0.15.4"
+    "sequelize-cli": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
