--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "~1.11.3",
     "material-ui": "^0.16.6",
     "method-override": "^2.3.6",
+    "morgan": "^1.7.0",
     "mysql": "^2.12.0",
     "passport": "~0.3.0",
     "passport-local": "~1.0.0",
@@ -45,7 +46,8 @@
     "react-dom": "^0.14.3",
     "react-materialize": "^0.17.7",
     "sequelize": "^3.25.0",
-    "sequelize-cli": "^2.4.0"
+    "sequelize-cli": "^2.4.0",
+    "serve-favicon": "^2.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
