--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-materialize": "^0.17.7",
+    "react-router": "^3.0.0",
     "sequelize": "^3.25.0",
     "sequelize-cli": "^2.4.0",
     "serve-favicon": "^2.3.2"
