--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "url": "https://github.com/gudiaz/timetrax/issues"
   },
   "scripts": {
-    "build": "webpack -w",
+    "build": "webpack",
     "serve": "serve ./public",
-    "start": "nodemon",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,7 +30,8 @@
   "devDependencies": {
     "axios": "^0.12.0",
     "babel": "^6.5.2",
-    "bcrypt": "~0.8.5",
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
     "compression": "^1.6.1",
     "connect-flash": "~0.1.1",
@@ -39,16 +40,21 @@
     "express-session": "~1.11.3",
     "geocoder": "^0.2.2",
     "if-env": "^1.0.0",
+    "material-ui": "^0.16.6",
     "materialize-css": "^0.97.8",
     "method-override": "^2.3.6",
+    "morgan": "^1.7.0",
     "mysql": "^2.12.0",
     "passport": "~0.3.0",
     "passport-local": "~1.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-materialize": "^0.17.7",
     "react-router": "^2.4.1",
+    "react-tap-event-plugin": "^2.0.1",
     "sequelize": "^3.25.0",
-    "sequelize-cli": "^2.4.0"
+    "sequelize-cli": "^2.4.0",
+    "serve-favicon": "^2.3.2"
   },
   "dependencies": {
     "babel-core": "^6.21.0",
@@ -58,10 +64,6 @@
     "express": "^4.14.0",
     "history": "^3.0.0",
     "http-server": "^0.8.5",
-    "json-loader": "^0.5.4",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-router": "^2.6.1",
-    "serve": "^1.4.0"
+    "json-loader": "^0.5.4"
   }
 }
