--- a/package.json
+++ b/package.json
@@ -5,65 +5,58 @@
   "author": "Gracie, Senthil, Zeynep",
   "license": "ISC",
   "homepage": "https://github.com/gudiaz/timetrax.git#readme",
-  "main": "public/index.html",
+  "main": "server.js",
   "bugs": {
     "url": "https://github.com/gudiaz/timetrax/issues"
   },
   "scripts": {
-    "build": "webpack --colors --progress",
-    "serve": "serve ./public",
+    "build": "webpack --devtool source-map ./app/app.js ./public/bundle.js",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha ./test/test.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gudiaz/timetrax"
   },
   "keywords": [
-    "Express",
     "MVC",
-    "MySQL",
     "Node",
-    "Sequalize",
-    "React"
+    "MySQL",
+    "Mongoose",
+    "Sequalizer",
+    "React",
+    "Express"
   ],
-  "devDependencies": {
+  "dependencies": {
     "axios": "^0.12.0",
     "babel": "^6.5.2",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
-    "compression": "^1.6.1",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.5",
     "express": "^4.14.0",
     "express-session": "~1.11.3",
-    "geocoder": "^0.2.2",
-    "if-env": "^1.0.0",
-    "jquery": "^2.1.4",
-    "materialize-css": "^0.97.3",
+    "material-ui": "^0.16.6",
     "method-override": "^2.3.6",
     "morgan": "^1.7.0",
     "mysql": "^2.12.0",
     "passport": "~0.3.0",
     "passport-local": "~1.0.0",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.8",
-    "react-materialize": ">=0.14.0",
-    "react-router": "^2.4.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-materialize": "^0.17.7",
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "sequelize": "^3.25.0",
     "sequelize-cli": "^2.4.0",
     "serve-favicon": "^2.3.2"
   },
-  "dependencies": {
-    "babel-core": "^6.21.0",
+  "devDependencies": {
+    "babel-core": "^6.3.13",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "express": "^4.14.0",
-    "history": "^3.0.0",
-    "http-server": "^0.8.5",
-    "json-loader": "^0.5.4",
-    "react": "^15.4.2"
+    "webpack": "^1.13.1"
   }
 }
