--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "material-ui": "^0.15.4",
     "materialize-css": "^0.97.8",
     "method-override": "^2.3.6",
+    "moment": "^2.17.1",
     "mysql": "^2.12.0",
     "passport": "~0.3.0",
     "passport-local": "~1.0.0",
