--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "passport-local": "~1.0.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-materialize": "^0.17.7",
     "react-router": "^2.4.1",
     "sequelize": "^3.25.0",
     "sequelize-cli": "^2.4.0"
