excluded bundle.js from git

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 node_modules
 npm-debug.log* 
 /client/public/build/
+public/bundle.js
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
