--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "sequelize": "^3.25.0",
-    "sequelize-cli": "^2.4.0",
-    "serve-favicon": "^2.3.2"
+    "sequelize-cli": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.13",
