--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel": "^6.5.2",
     "bcrypt": "~0.8.5",
     "body-parser": "^1.15.2",
+    "classnames": "^2.2.5",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.5",
     "express": "^4.14.0",
