--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
+    "clock": "^0.1.6",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.3.5",
     "dateformat": "^2.0.0",
