--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mysql": "^2.12.0",
     "passport": "~0.3.0",
     "passport-local": "~1.0.0",
+    "promise-timer-stopwatch": "^1.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-materialize": "^0.17.7",
