--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "MVC",
     "Node",
     "MySQL",
-    "Mongoose",
     "Sequalizer",
     "React",
+    "Material UI",
     "Express"
   ],
   "dependencies": {
@@ -33,20 +33,15 @@
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
-    "clock": "^0.1.6",
-    "connect-flash": "~0.1.1",
-    "cookie-parser": "~1.3.5",
     "dateformat": "^2.0.0",
     "express": "^4.14.0",
     "express-session": "~1.11.3",
     "material-ui": "^0.16.6",
     "method-override": "^2.3.6",
     "moment": "^2.17.1",
-    "morgan": "^1.7.0",
     "mysql": "^2.12.0",
     "passport": "~0.3.0",
     "passport-local": "~1.0.0",
-    "promise-timer-stopwatch": "^1.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-materialize": "^0.17.7",
